rsschool-react/src/components/GameDetails/GameDetails.module.css
.details {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: start;
  padding: 1rem;
  border-radius: 1rem;
  background-color: #193f4f;
}

.game {
  display: flex;
  flex-direction: column;
}

.title {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.2rem;
}

.close {
  font-size: 2rem;
  cursor: pointer;
}

.image {
  width: 100%;
  border-radius: 1rem;
}

.platforms {
  display: flex;
  column-gap: 0.5rem;
  padding: 0.5rem 0 1rem;
}

.genres {
  align-self: end;
  display: flex;
  column-gap: 0.5rem;
}

.description {
  text-align: justify;
}

@media (max-width: 991.98px) {
  .platforms {
    display: none;
  }
  .game {
    row-gap: 0.5rem;
  }
}

